--- a/public/css.css
+++ b/public/css.css
@@ -544,3 +544,22 @@ video {
   max-width: 100%;
   max-height: 90%;
 }
+
+#cookieNotification {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 6rem;
+  padding: 10px;
+  background-color: black;
+  text-align: center;
+  z-index: 9999;
+  color: #ffffff;
+  
+}
+#cookieNotification button {
+  color: #ffffff;
+  padding: 0;
+  margin: 0;
+}
